@@ -1,3 +1,5 @@
+          <!-- Bootstrap -->
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<style>
 		#icon-{
 			font-size: 0px;
@@ -102,12 +104,24 @@
                   <label class="col-sm-2 control-label" for="inputdomain3">Domain</label>
                   <div class="col-sm-10">
                     <select class="form-control" name="domain" id="inputdomain3">
+                      <option>Select Domain</option>
                       [% FOREACH domain IN domains.sort %]
                       <option>[% domain %]</option>
                       [% END %]
                     </select>
                   </div>
                    <input type="hidden" name="action" value="install">
+                </div>
+                <div class="form-group domain-aliases">
+                   <label class="col-sm-2 control-label" for="altdomains">Select Alt-Domains</label>
+                   <div class="col-sm-10">
+                     <select class="form-control" name="aliases" id="altdomains" multiple>
+                       <option></option>
+                     </select>
+                     <span class="help-block">
+                        Use CTRL key to select muliple domains.
+                     </span>
+                  </div>
                 </div>
                 <div class="form-group">
                   <div class="col-sm-offset-2 col-sm-10">
@@ -136,6 +150,34 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script>
+    $(document).ready(function() {
+         $('.domain-aliases').hide();
+         $("#inputdomain3").change(function () {
+           var domain = $(this).val();
+           $('#altdomains').empty();
+           var urllocation = window.location.href;
+           var cpsess = urllocation.match(/(cpsess([0-9]+))/g);
+           var apiurl = '/' + cpsess + '/3rdparty/letsencrypt-cpanel-ui/index.live.pl';
+           $.ajax({
+               url:apiurl,
+               type:'GET',
+               data: 'action=getAliases&domain=' + domain,
+               success: function( json ) {
+                 $('.domain-aliases').show();
+                 $.each(json, function(i, value) {
+                   $('#altdomains').append($('<option>').text(value).attr('value', value));
+                 });
+                 $("#submit").html(' <button type="submit" class="btn btn-default">Submit</button>');
+               },
+               beforeSend: function() {
+                 $("#submit").html('<i class="fa fa-refresh fa-spin fa-3x fa-fw"></i>');
+               },
+               
+           });
+         });
+    })
+  </script>
   [% IF (theme == 'paper_lantern') %]
     <script type="text/javascript">
         $("#lnkHeaderHome").prop("href", "[% base_url %]index.html");
